--- a/WebContent/resources/css/util.css
+++ b/WebContent/resources/css/util.css
@@ -12,6 +12,8 @@
 
 button[disabled], html input[disabled] {
     cursor: no-drop;
+   background: #e4e4e4;	
+    color: #a0a0a0;
 }
 
 .ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {
@@ -114,4 +116,10 @@ button[disabled], html input[disabled] {
 #bebidas td > label,
 #pratosfeitos td > label{
 	width: 100%;
+}
+
+
+#avaliacao td > label {
+	padding-right: 20px;
+    padding-left: 5px;
 }
