--- a/WebContent/resources/css/login.css
+++ b/WebContent/resources/css/login.css
@@ -1,10 +1,17 @@
-.bodylogin {
-	background-image: url("../resources/images/wallpaper-login.jpg");
-	background-repeat: no-repeat;
+body {
+    position: relative;
+    min-height: 100%;
+    background-image: url(../resources/images/wallpaper-login.jpg);
+    background-repeat: no-repeat;
     background-size: 100% 100%;
-    height: 100%;
+    padding-bottom: 6rem;
+/*     background: #2b2727; */
 }
 
+html {
+    height: 100%;
+    background: #2b2727;
+}
 
 .nav-header {
     background-color: rgba(198, 40, 40, 0.38);
@@ -47,7 +54,7 @@
 }
 
 
-footer {
+	footer {
 	    background: #c62828;
 	    padding: 20px;
 	    color: white;
@@ -60,4 +67,17 @@ footer {
 		left: 0;
 		padding: 1rem;
 		text-align: center;
+	}
+
+	
+	.esqueciMinhaSenha { 
+		color: white;
+	}
+	
+	.esqueciMinhaSenha:hover,
+	.esqueciMinhaSenha:hover,
+	.esqueciMinhaSenha:hover { 
+		color: #cfcfcf;
+		text-decoration: underline;
+		cursor: pointer;
 	}
