--- a/WebContent/resources/css/util.css
+++ b/WebContent/resources/css/util.css
@@ -123,3 +123,18 @@ button[disabled], html input[disabled] {
 	padding-right: 20px;
     padding-left: 5px;
 }
+
+#pagamento > div.ui-panel,
+#pagamento > div.ui-panel > div  {
+	padding: 0px;
+}
+
+.ui-icon-bullet {
+    background-position: -81px -145px !important;
+}
+
+
+.ui-dialog.ui-widget-content .ui-dialog-titlebar {
+    background: #a82521 !important;
+    color: white !important;
+}
