--- a/WebContent/resources/css/WebRefeicoes.css
+++ b/WebContent/resources/css/WebRefeicoes.css
@@ -177,3 +177,50 @@ a:hover, a:focus {
 	text-decoration: none;
 	color: #d75959 !important;
 }
+
+footer {
+    background: #dd4b39;
+    padding: 20px;
+    color: white;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	padding: 1rem;
+}
+
+.content-wrap {
+   	background-color: #ecf0f5;
+    z-index: 800;
+    min-height: 901px;
+    margin-left: 230px;
+    display: block;
+}
+
+.content-header {
+    background: transparent;
+    position: relative;
+    padding: 0px;
+    background-color: #e8e8e8;
+    display: block;
+    padding-left: 4px;
+    width: 25%;
+    border: 1px solid #e8e8e8;
+    color: #777777;
+    padding: 10px;
+    margin: 4px;
+    font-weight: bold;
+    box-shadow: 0 0px 2px 0 rgba(0,0,0,0.16),0 2px 6px 0 rgba(0,0,0,0.12)!important;
+}
+
+.content {
+	min-height: 250px;
+    padding: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
