--- a/WebContent/resources/css/util.css
+++ b/WebContent/resources/css/util.css
@@ -22,12 +22,7 @@ button[disabled], html input[disabled] {
     background-color: #0088cc;
     background-color: #680404;
     background-position: 0px;
-    background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
-    background-image: -webkit-linear-gradient(top, #c92323, #d52c2c);
-    background-image: -o-linear-gradient(top, #0088cc, #0077b3);
-    background-image: linear-gradient(to bottom, #c92323, #d52c2c);
-    background-repeat: repeat-x;
+    background: #d73925 !important;
     filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
 }
 
@@ -58,11 +53,16 @@ button[disabled], html input[disabled] {
 
 #cardapio ul {
    display: flex;
+   align-items: center;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   justify-content: center;
 }
 
 #cardapio .ui-tabs.ui-tabs-top .ui-tabs-nav.ui-widget-header li.ui-state-active,
 #cardapio .ui-tabs.ui-tabs-top .ui-tabs-nav.ui-widget-header li {
-    width: 50%;
+    width: 140px;
     margin-bottom: 1px;
     align-items: center;
     display: -webkit-flex;
@@ -76,18 +76,37 @@ button[disabled], html input[disabled] {
 
 #cardapio .ui-tabs.ui-tabs-top .ui-tabs-nav.ui-widget-header li.ui-state-active,
 .ui-tabs .ui-tabs-nav.ui-widget-header li.ui-state-hover {
-    background: #680404;
+    background: rgb(221, 75, 57);
+    margin-top: 0px;
+    border: none;
+    border: 1px solid #dd4b39;
 }
 
 #cardapio .ui-tabs.ui-tabs-top .ui-tabs-nav.ui-widget-header li {
-    background: #2b2727;
+    background: transparent;
+    border-radius: 0px;
+    border: 1px solid #becbd2;
+    margin: 0px 5px;
+    border-bottom: none;
+    margin-bottom: 2px;
 }
 
 #cardapio .ui-tabs .ui-tabs-nav.ui-widget-header li a {
-	color: #ffffff;
-	outline: none;
-	font-weight: bold;
-	text-shadow: none;
+    outline: none;
+    font-weight: bold;
+    text-shadow: none;
+    color: #a1a2a2;
+    display: block;
+    line-height: 2.5;
+    padding: 0 1.25em;
+    white-space: nowrap;
+}
+
+.ui-tabs .ui-tabs-nav li.ui-tabs-selected a, 
+.ui-tabs .ui-tabs-nav li.ui-state-disabled a, 
+.ui-tabs .ui-tabs-nav li.ui-state-processing a {
+    cursor: pointer !important;
+    color: white !important;
 }
 
 
@@ -135,6 +154,14 @@ button[disabled], html input[disabled] {
 
 
 .ui-dialog.ui-widget-content .ui-dialog-titlebar {
-    background: #a82521 !important;
+    background: #dd4b39 !important;
     color: white !important;
+}
+
+.ui-growl {
+	z-index: 1062 !important;
+}
+
+.ui-tabs.ui-tabs-top .ui-tabs-nav.ui-widget-header {
+    border-bottom: 1px solid #dd4b39;
 }
