--- a/WebContent/resources/css/util.css
+++ b/WebContent/resources/css/util.css
@@ -43,7 +43,6 @@ button[disabled], html input[disabled] {
 }
 
 .ui-state-error {
-    background: #eeeeee 50% 50% repeat-x;
     color: #000000;
 }
 
@@ -115,14 +114,14 @@ button[disabled], html input[disabled] {
 }
 
 #valores .ui-widget-header {
-    border: 1px solid #eeeeee;
-    background: #bf2424;
+    background-color: #337ab7 !important;
+    border-color: #2e6da4 !important;
     color: #ffffff;
     font-weight: bold;
 }
 
 .ui-tabs.ui-tabs-top {
-    border-bottom: 1px solid #eeeeee;
+   border-bottom: 1px solid #ffffff;
 }
 
 #pratosfeitos tr,
@@ -164,4 +163,41 @@ button[disabled], html input[disabled] {
 
 .ui-tabs.ui-tabs-top .ui-tabs-nav.ui-widget-header {
     border-bottom: 1px solid #dd4b39;
+}
+
+#gridAvaliacao .ui-datalist-content{
+	display: grid;
+}
+
+
+/* Grafico do primefaces */
+.jqplot-highlighter-tooltip, .jqplot-canvasOverlay-tooltip {
+    border: 1px solid #dbdbdb !important;
+    font-size: 13px !important;
+    background: rgb(255, 255, 255) !important;
+    padding: 5px !important;
+    /* border-radius: 10px; */
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.16) !important; 
+}
+
+table.jqplot-table-legend, table.jqplot-cursor-legend {
+    border: 1px solid #b6b6b6 !important;
+}
+
+tr.jqplot-table-legend {
+	padding: 10px;
+    display: inline-block;
+    background: white;
+    border: 1px solid white;
+}
+    
+div.jqplot-table-legend-swatch-outline {
+    border: none !important;
+    padding: 5px !important;
+}
+
+td.jqplot-table-legend-label {
+    padding: 3px !important;
+    color: #707070 !important;
+    font-weight: bold !important;
 }
